@@ -29,6 +29,7 @@ import fr.dwightstudio.jarmemu.base.gui.JArmEmuApplication;
 import fr.dwightstudio.jarmemu.base.gui.factory.ValueTableCell;
 import fr.dwightstudio.jarmemu.base.gui.view.SymbolView;
 import fr.dwightstudio.jarmemu.base.sim.entity.StateContainer;
+import fr.dwightstudio.jarmemu.base.util.TableViewUtils;
 import fr.dwightstudio.jarmemu.base.util.converters.FileNameStringConverter;
 import javafx.application.Platform;
 import javafx.collections.ObservableList;
@@ -62,36 +63,18 @@ public class SymbolsController implements Initializable {
     public void initialize(URL url, ResourceBundle resourceBundle) {
 
         col0 = new TableColumn<>(JArmEmuApplication.formatMessage("%tab.symbols.file"));
-        col0.setGraphic(new FontIcon(Material2OutlinedAL.INSERT_DRIVE_FILE));
-        col0.setSortable(false);
-        col0.setEditable(false);
-        col0.setReorderable(false);
-        col0.setMinWidth(80);
-        col0.setPrefWidth(80);
-        col0.getStyleClass().add(Tweaks.ALIGN_CENTER);
+        TableViewUtils.setupColumn(col0, Material2OutlinedAL.INSERT_DRIVE_FILE, 80, false, true, true);
         col0.setCellValueFactory(c -> c.getValue().getFileIndexProperty());
         col0.setCellFactory(TextFieldTableCell.forTableColumn(new FileNameStringConverter()));
 
         col1 = new TableColumn<>(JArmEmuApplication.formatMessage("%tab.symbols.name"));
-        col1.setGraphic(new FontIcon(Material2OutlinedAL.LABEL));
-        col1.setEditable(false);
-        col1.setReorderable(false);
-        col1.setSortable(false);
-        col1.setMinWidth(80);
-        col1.setPrefWidth(80);
-        col1.getStyleClass().add(Tweaks.ALIGN_CENTER);
+        TableViewUtils.setupColumn(col1, Material2OutlinedAL.LABEL, 80, false, true, true);
         col1.setCellValueFactory(c -> c.getValue().getNameProperty());
         col1.setCellFactory(TextFieldTableCell.forTableColumn());
         col1.setSortType(TableColumn.SortType.ASCENDING);
 
         col2 = new TableColumn<>(JArmEmuApplication.formatMessage("%tab.symbols.value"));
-        col2.setGraphic(new FontIcon(Material2OutlinedMZ.MONEY));
-        col2.setEditable(false);
-        col2.setReorderable(false);
-        col2.setSortable(false);
-        col2.setMinWidth(80);
-        col2.setPrefWidth(80);
-        col2.getStyleClass().add(Tweaks.ALIGN_CENTER);
+        TableViewUtils.setupColumn(col2, Material2OutlinedMZ.MONEY, 80, false, true, true);
         col2.setCellValueFactory(c -> c.getValue().getValueProperty());
         col2.setCellFactory(ValueTableCell.factoryDynamicFormat());
 
