@@ -1,6 +1,8 @@
 0.2.2 -> 0.2.3
 - Added instruction code in memory
 - Improved readability in memory views
+- Fixed memory edition in GUI
+
 
 0.2.1 -> 0.2.2
 
